--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
+<link href="./css/test.css" rel="stylesheet" />
     <!-- Custom fonts for this template -->
     <link
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i"
@@ -46,8 +46,8 @@
 
     <div class="masthead">
       <div
-        class="masthead-bg"
-        style="background-color: rgb(255 120 0 / 0.8);"
+        class="masthead-bg test"
+        
       ></div>
       <div class="container h-100">
         <div class="row h-100">
